--- a/README.Rmd
+++ b/README.Rmd
@@ -2,8 +2,8 @@
 output: github_document
 ---
 
-<!-- [![Travis-CI Build Status](https://travis-ci.com/xavierdidelot/CreDating.svg?branch=master)](https://travis-ci.com/xavierdidelot/CreDating)
-[![Coverage Status](https://codecov.io/github/xavierdidelot/CreDating/coverage.svg?branch=master)](https://codecov.io/github/xavierdidelot/CreDating?branch=master) -->
+<!-- [![Travis-CI Build Status](https://travis-ci.com/xavierdidelot/BactDating.svg?branch=master)](https://travis-ci.com/xavierdidelot/BactDating)
+[![Coverage Status](https://codecov.io/github/xavierdidelot/BactDating/coverage.svg?branch=master)](https://codecov.io/github/xavierdidelot/BactDating?branch=master) -->
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
@@ -16,23 +16,23 @@ knitr::opts_chunk$set(
 set.seed(0)
 ```
 
-# CreDating
+# BactDating
 
-The goal of CreDating is to perform Bayesian dating of the nodes of phylogenetic tree.
+The goal of BactDating is to perform Bayesian dating of the nodes of phylogenetic tree.
 This typically involves simultaneous Bayesian estimation of the molecular clock rate and coalescent rate.
 Additional features include inference of root location, lost sampling dates and different evolutionary models.
 
 ## Installation
 
-You can install CreDating from github with:
+You can install BactDating from github with:
 
 ```{r gh-installation, eval = FALSE}
-devtools::install_github("xavierdidelot/CreDating")
+devtools::install_github("xavierdidelot/BactDating")
 ```
 
 The package can then be loaded using:
 ```{r}
-library(CreDating)
+library(BactDating)
 ```
 
 ## Example
@@ -52,15 +52,15 @@ r=roottotip(obsphy,1990:2010)
 
 We can run the dating analysis on this phylogeny as follows:
 ```{r}
-res=credate(obsphy,1990:2010)
+res=bactdate(obsphy,1990:2010)
 plot(res,'treeCI')
 ```
 
 ## More information and getting help
 
-For more detailed examples of how to use CreDating, see the vignettes [here](https://github.com/xavierdidelot/CreDating/tree/master/vignettes).
+For more detailed examples of how to use BactDating, see the vignettes [here](https://github.com/xavierdidelot/BactDating/tree/master/vignettes).
 See also the help included in the package using the R command
-`help(package='CreDating')`. 
+`help(package='BactDating')`. 
 
-If you have any problem or question please create an issue [here](https://github.com/xavierdidelot/CreDating/issues) 
+If you have any problem or question please create an issue [here](https://github.com/xavierdidelot/BactDating/issues) 
 or get in touch by emailing `xavier.didelot@gmail.com`
