--- a/vignettes/exampleRec.Rmd
+++ b/vignettes/exampleRec.Rmd
@@ -1,9 +1,13 @@
 ---
-title: "Example of using BactDating after recombination analysis"
+title: "Using BactDating after recombination analysis"
 author: "Xavier Didelot"
 date: '`r Sys.Date()`'
 output:
   pdf_document: default
+vignette: >
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteIndexEntry{Using BactDating after recombination analysis}
+  %\usepackage[utf8]{inputenc}
 ---
 
 ##Initialisation
