--- a/vignettes/exampleTest.Rmd
+++ b/vignettes/exampleTest.Rmd
@@ -1,9 +1,13 @@
 ---
-title: "Example of using BactDating to test significance of temporal signal"
+title: "Using BactDating to test significance of the temporal signal"
 author: "Xavier Didelot"
 date: '`r Sys.Date()`'
 output:
   pdf_document: default
+vignette: >
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteIndexEntry{Using BactDating to test significance of the temporal signal}
+  %\usepackage[utf8]{inputenc}
 ---
 
 ##Initialisation
@@ -35,7 +39,7 @@ obsphy=simobsphy(phy,rate=10)
 res=roottotip(obsphy,dates)
 ```
 
-Let's consider that we do not know where is the root of the observed phylogeny, and that the data of the last sample has been lost:
+Let's consider that we do not know where is the root of the observed phylogeny, and that the date of the last sample has been lost:
 
 ```{r}
 obsphy=unroot(obsphy)
