--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ set.seed(0)
 
 [![Travis-CI Build Status](https://travis-ci.com/xavierdidelot/BactDating.svg?branch=master)](https://travis-ci.com/xavierdidelot/BactDating)
 [![codecov](https://codecov.io/gh/xavierdidelot/BactDating/branch/master/graph/badge.svg)](https://codecov.io/gh/xavierdidelot/BactDating)
+![GitHub](https://img.shields.io/github/license/xavierdidelot/BactDating)
 
 The goal of BactDating is to perform Bayesian dating of the nodes of a bacterial phylogenetic tree. This typically involves simultaneous Bayesian estimation of the molecular clock rate and coalescent rate. Additional features include inference of root location, lost sampling dates and different evolutionary models.
 
