--- a/vignettes/Staph.Rmd
+++ b/vignettes/Staph.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Using BactDating on a real dataset"
+title: "Application of BactDating on S. aureus ST239"
 author: "Xavier Didelot"
 date: '`r Sys.Date()`'
 output:
