--- a/vignettes/Staph.Rmd
+++ b/vignettes/Staph.Rmd
@@ -57,3 +57,15 @@ Let's see where the root is likely to be:
 ```{r}
 plot(res,'treeRoot',show.tip.label=F)
 ```
+
+You can extract and plot a sample of trees as follows:
+
+```{r}
+out=extractSample(res,6)
+par(mfrow=c(2,3),mar=c(5,5,0.5,0.5))
+for (i in 1:6) {
+  plot(out[[i]])
+  axisPhylo(1,backward = F)
+}
+```
+
